making draw methods return new y index and page number