@@ -4,6 +4,7 @@ import com.wi.test.constants.PDConstants;
 import com.wi.test.enums.Font;
 import com.wi.test.pojo.PageMargins;
 import com.wi.test.pojo.Text;
+import com.wi.test.pojo.UpdatedPagePosition;
 import com.wi.test.util.CustomTaggedPdfBuilder;
 import com.wi.test.pojo.Cell;
 import com.wi.test.pojo.DataTable;
@@ -37,45 +38,49 @@ public class Main {
                     Color.BLUE.darker().darker(), 12, formBuilder.PAGE_WIDTH - 100, PDConstants.LEFT_ALIGN),
                 0, 0, sec1, StandardStructureTypes.H1, 0);
 
-            formBuilder.drawTextElement(
-                new Text(10, IntStream.range(0,500).mapToObj(integer -> String.format("This is a very long string %d. ", integer)).collect(Collectors.joining()), Color.BLACK, Font.HELVETICA),
-                0, 50, sec1, StandardStructureTypes.P, 0);
+            UpdatedPagePosition newPosition = drawTableOne(formBuilder, sec1);
+            System.out.println(newPosition);
 
-//            drawTableOne(formBuilder, sec1);
-//
-//
-//            //Hard coded table2
-//            DataTable table2 = new DataTable("Table Summary 2");
-//            table2.addRow(new Row(Arrays.asList(
-//                    new Cell("Column \nHeader \n1 (Header)", Font.HELVETICA, 5, 35, PDConstants.TOP_ALIGN, true),
-//                    new Cell("Column \nHeader \n2 (Description)", Font.HELVETICA, 5, 215, PDConstants.TOP_ALIGN,  true),
-//                    new Cell("Column \nHeader \n3 (Text)",  Font.HELVETICA, 5, 75, PDConstants.TOP_ALIGN, true)),
-//                30));
-//            table2.addRow(new Row(Arrays.asList(
-//                    new Cell("Row \nHeader \n1", Font.HELVETICA, 5, 35, PDConstants.TOP_ALIGN, false),
-//                    new Cell("Hi. This is a long paragraph about absolutely nothing. I hope you enjoy reading it! \n" +
-//                            "This is a long paragraph about absolutely nothing. I hope you enjoy reading it!\n" +
-//                            "This is a long paragraph about absolutely nothing. I hope you enjoy reading it!\n" +
-//                            "This is a long paragraph about absolutely nothing. I hope you enjoy reading it!\n" +
-//                            "Goodbye.",
-//                        Font.HELVETICA, 5, 215, PDConstants.TOP_ALIGN, false),
-//                    new Cell("System Verification: N/A.", Font.HELVETICA, 5, 75, PDConstants.TOP_ALIGN, false)),
-//                    50));
-//            table2.addRow(new Row(Arrays.asList(
-//                    new Cell("Row \nHeader \n2", Font.HELVETICA, 5, 35, PDConstants.TOP_ALIGN, false),
-//                    new Cell("Hi. This is a long paragraph about absolutely nothing. I hope you enjoy reading it! \n" +
-//                            "This is a long paragraph about absolutely nothing. I hope you enjoy reading it!\n" +
-//                            "This is a long paragraph about absolutely nothing. I hope you enjoy reading it!\n" +
-//                            "Goodbye.",
-//                        Font.HELVETICA, 5, 215, PDConstants.TOP_ALIGN, false),
-//                    new Cell("System Verification: N/A.", Font.HELVETICA, 5, 75, PDConstants.TOP_ALIGN, false)),
-//
-//                    40));
-//            formBuilder.drawTable(table2, 50, 150, 0, sec1);
-//
-//            List<String> bulletedListStrings = List.of("test item 1", "test item 2", "test item 3");
-//            // draw a bulleted list and try to tag it.
-////            formBuilder.drawBulletList(bulletedListStrings, 50, 300, sec1, 0);
+
+            //Hard coded table2
+            DataTable table2 = new DataTable("Table Summary 2");
+            table2.addRow(new Row(Arrays.asList(
+                    new Cell("Column \nHeader \n1 (Header)", Font.HELVETICA, 5, 35, PDConstants.TOP_ALIGN, true),
+                    new Cell("Column \nHeader \n2 (Description)", Font.HELVETICA, 5, 215, PDConstants.TOP_ALIGN,  true),
+                    new Cell("Column \nHeader \n3 (Text)",  Font.HELVETICA, 5, 75, PDConstants.TOP_ALIGN, true)),
+                30));
+            table2.addRow(new Row(Arrays.asList(
+                    new Cell("Row \nHeader \n1", Font.HELVETICA, 5, 35, PDConstants.TOP_ALIGN, false),
+                    new Cell("Hi. This is a long paragraph about absolutely nothing. I hope you enjoy reading it! \n" +
+                            "This is a long paragraph about absolutely nothing. I hope you enjoy reading it!\n" +
+                            "This is a long paragraph about absolutely nothing. I hope you enjoy reading it!\n" +
+                            "This is a long paragraph about absolutely nothing. I hope you enjoy reading it!\n" +
+                            "Goodbye.",
+                        Font.HELVETICA, 5, 215, PDConstants.TOP_ALIGN, false),
+                    new Cell("System Verification: N/A.", Font.HELVETICA, 5, 75, PDConstants.TOP_ALIGN, false)),
+                    50));
+            table2.addRow(new Row(Arrays.asList(
+                    new Cell("Row \nHeader \n2", Font.HELVETICA, 5, 35, PDConstants.TOP_ALIGN, false),
+                    new Cell("Hi. This is a long paragraph about absolutely nothing. I hope you enjoy reading it! \n" +
+                            "This is a long paragraph about absolutely nothing. I hope you enjoy reading it!\n" +
+                            "This is a long paragraph about absolutely nothing. I hope you enjoy reading it!\n" +
+                            "Goodbye.",
+                        Font.HELVETICA, 5, 215, PDConstants.TOP_ALIGN, false),
+                    new Cell("System Verification: N/A.", Font.HELVETICA, 5, 75, PDConstants.TOP_ALIGN, false)),
+
+                    40));
+            newPosition = formBuilder.drawTable(table2, 50, newPosition.getY() + 25.0f, newPosition.getPageIndex(), sec1);
+            System.out.println(newPosition);
+
+
+            newPosition = formBuilder.drawTextElement(
+                new Text(10, IntStream.range(0,500).mapToObj(integer -> String.format("This is a very long string %d. ", integer)).collect(Collectors.joining()), Color.BLACK, Font.HELVETICA),
+                0, newPosition.getY()  + 25, sec1, StandardStructureTypes.P, newPosition.getPageIndex());
+            System.out.println(newPosition);
+
+            List<String> bulletedListStrings = List.of("test item 1", "test item 2", "test item 3");
+            // draw a bulleted list and try to tag it.
+//            formBuilder.drawBulletList(bulletedListStrings, 50, 300, sec1, 0);
 
             formBuilder.saveAndClose("UAEXAMPLE.PDF");
 
@@ -85,7 +90,7 @@ public class Main {
         System.out.println(dateFormat.format(new Date()));
     }
 
-    private static void drawTableOne(CustomTaggedPdfBuilder formBuilder, PDStructureElement sec1) throws Exception {
+    private static UpdatedPagePosition drawTableOne(CustomTaggedPdfBuilder formBuilder, PDStructureElement sec1) throws Exception {
         //Hard coded table1
         DataTable table1 = new DataTable("Table Summary 1");
         table1.addRow(new Row(Arrays.asList(
@@ -100,6 +105,6 @@ public class Main {
             new Cell("Row Header 3(Date):", Font.HELVETICA, 5, 100, PDConstants.LEFT_ALIGN, true),
             new Cell("12/31/2016", Font.HELVETICA, 5, 400, PDConstants.LEFT_ALIGN, false)),
             15));
-        formBuilder.drawTable(table1, 50, 100, 0, sec1);
+        return formBuilder.drawTable(table1, 50, 100, 0, sec1);
     }
 }
